# factor-world

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: factors.html
examples/: make_env_with_factor.py
factorworld/: __init__.py  variables.py
factorworld/envs/: __init__.py  asset_path_utils.py  sawyer_xyz_env.py  xml_utils.py
factorworld/envs/assets/factors/: factors_eval.xml  factors_train.xml
factorworld/envs/factors/: __init__.py  arm_pos.py  camera_pos.py  constants.py  factor_wrapper.py  floor_texture.py  goal_pos.py  light.py  obj_pos.py  obj_size.py  object_texture.py  table_pos.py  table_texture.py  xml_wrapper.py
factorworld/envs/scripts/: generate_factors_xml.py
factorworld/envs/tasks/: sawyer_pick_place_v2.py
factorworld/policies/: __init__.py  sawyer_pick_place_v2_policy.py
scripts/: generate_html.py  record_video.py  stitch_videos.py
tests/: test_variables.py
tests/envs/: test_asset_path_utils.py
tests/envs/factors/: test_wrappers.py
