[project]
name = "factor-world"
version = "0.1.0"
description = "Unofficial implementation of Factor-World environment"
authors = [
    {name = "Daniel CH Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = [
    "metaworld @ git+https://github.com/Farama-Foundation/Metaworld.git@master",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
